# boggle-bot

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  boggle_bench.cpp  trie_bench.cpp  trie_benchmark.cpp
boggle-bot/: __main__.py  wordplays.py
boggle-solver/: CMakeLists.txt  boggle.cpp  boggle.hpp  pyboggle.cpp  pyboggle.hpp  trie.cpp  trie.hpp
tests/: CMakeLists.txt  boggle_test.cpp  trie_test.cpp  trie_tests.cpp
tests/data/: boggle_4x4.csv
